# esperto

./: .env.example  CLAUDE.md  Makefile  README.md  design.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 3d1c19bb0a88_add_email_to_users.py  b7d4e2f9a1c3_add_historico_tables.py  c9f2a41d7e35_add_google_auth_to_users.py  dbe3eaf1b4b8_add_display_name_to_users.py  e4d5c6b7a8f9_add_is_onboarded_to_users.py  eca2c4ce5d43_add_letroso_tables.py
backend/app/: config.py  enums.py  main.py  models.py  seed.py  test_leproso.py
backend/app/auth/: google.py  router.py  schemas.py  service.py
backend/app/dashboard/: service.py
backend/app/historico/: dataset.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/app/letroso/: dictionary.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/app/ranking/: service.py
backend/app/users/: model.py  repository.py  schemas.py
backend/app/utils/: email.py
backend/data/historico/: eventos.csv
backend/tests/: test_google_auth.py  test_signup.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: AvatarCropModal.module.css  AvatarCropModal.tsx  Card.tsx  CompareModal.module.css  CompareModal.tsx  Confetti.tsx  ErrorBoundary.tsx  GoogleButton.tsx  Layout.module.css  Layout.tsx  Logo.module.css  Logo.tsx
(+34 files in other folders)
