[project]
name = "esperto"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "passlib[bcrypt]>=1.7",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.3",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.3.0",
    "fastapi-mail>=1.6.5",
    "google-auth>=2.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
